Closed Bug 999456 Opened 10 years ago Closed 10 years ago

load events should not be cancelable

Categories

(Core :: DOM: Events, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: erik, Assigned: bzbarsky)

Details

Attachments

(1 file)

Step 7.2 at

http://www.whatwg.org/specs/web-apps/current-work/multipage/the-end.html#the-end

"If the Document is in a browsing context, create a trusted event named load that does not bubble and is not cancelable and which uses the Event interface, and dispatch it at the Document's Window object, with target override set to the Document object."

It seems Gecko is firing this event as cancelable
I wonder whether these booleans should default to false as they would for the Event constructor....
Attachment #8425973 - Flags: review?(bugs)
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Whiteboard: [need review]
Attachment #8425973 - Flags: review?(bugs) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/fa57f2415e43
Flags: in-testsuite+
Whiteboard: [need review]
https://hg.mozilla.org/mozilla-central/rev/fa57f2415e43
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: