Bug 999456.  Page load events should not be cancelable.  r=smaug